--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -130,6 +130,11 @@ footer{
     padding: 0em !important;
 }
 
+.nav-mobile{
+    padding: 0em 0 !important;
+    margin: 0 0 0em;
+}
+
 .web-nav, .nav-toggle, .nav-mobile, .logo{
     display:block;
     background-color:black;
@@ -150,6 +155,7 @@ footer{
 
 .nav-toggle{
     height:auto;
+    padding-bottom: 1.1em;
 }
 
 
