--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -132,7 +132,9 @@ footer{
 
 .nav-mobile{
     padding: 0em 0 !important;
-    margin: 0 0 0em;
+    margin: 0 0 0em 0;
+    background-color: black;
+    width: center;
 }
 
 .web-nav, .nav-toggle, .nav-mobile, .logo{
