--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -75,8 +75,8 @@ h2{
     font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
 }
 
-h2.steps{
-    margin-left:2.2rem;
+h1.steps{
+    margin-top:0.6em;
 }
 h3{
     margin-right:6.5rem;
@@ -272,7 +272,7 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     text-align:center;
     width:100%;
     color: black;
-    border-bottom: 0.05em solid grey; 
+   
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -285,6 +285,7 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     padding-bottom:1.93rem;
     visibility:visible;
     opacity:1;
+    margin-top:2em;
 }
 
 .purchase-item2:hover, .purchase-item3:hover{
@@ -662,4 +663,16 @@ img.heart{
 .address {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+}
+
+.chef-image-checkout{
+    margin-left:-4rem;
+}
+
+.remove-chef{
+    margin-left:1.5rem;
+}
+
+.chef-information-checkout{
+    margin-left:-3rem;
 }
