--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -102,9 +102,15 @@
     }
 	.grid-col-5of10{
 	width:50%;
+
 	}
 
-	.gruid-col-6of10{
+	.grid-col-5of10-diner{
+	width:50%;
+	margin-right: -2rem;
+	}
+	
+	.grid-col-6of10{
 		width:60%;
 	}
 
