--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -341,11 +341,18 @@ input[type = "submit"]:hover > .purchasse-item2{
 
 /*Styling fill in area: mostly at purchase webpage*/
 
-.textfield{
+.textfield, .textfield-diner-name {
     display:inline-block;
     padding:1rem;
     width:100%;
     height:5%;
+}
+
+/*purchase process3: personal information*/
+.textfield-diner-name{
+    width: 80%;
+    margin-left: -3.2rem;
+    margin-right:0.5rem;
 }
 
 .fillarea{
@@ -682,3 +689,24 @@ img.heart{
 .chef-information-checkout{
     margin-left:-3rem;
 }
+
+/*purchase process 2: order summary*/
+.customize-meal{
+    margin-left:-1rem;
+}
+
+.customer_name{
+    margin-left:-3rem;
+    margin-right:-1.5rem;
+}
+
+.location-selected{
+    margin-top: 0.8rem;
+    margin-left: -3rem;
+}
+
+.total-price{
+    text-align:end;
+    margin-top:2em;
+}
+
