--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -109,6 +109,12 @@
 	width:50%;
 	margin-right: -2rem;
 	}
+
+	.grid-col-5of10-card-information{
+	width:50%;
+	
+	}
+	
 	
 	.grid-col-6of10{
 		width:60%;
