Updated main.css and style guide

--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -92,7 +92,7 @@ footer{
 }
 
 #footer {
-    background:#ffab62;
+    background:#ED5C0C;
     width:100%;
     height:100px;
     position:absolute;
