--- a/Style_Guide/css/main.css
+++ b/Style_Guide/css/main.css
@@ -40,20 +40,6 @@ nav.mainMenu {
     transition: background-color 0.5s ease-out;
 }
 
-nav a{
-	text-decoration: none;
-	text-transform: uppercase;
-	color: #fff;
-	margin-right: 1rem;
-}
-
-nav a:active, a:hover {
-	opacity:0.4;
-	-o-transition: 0.4s;
-	-ms-transition: 0.4s;
-	-moz-transition: 0.4s;
-	-webkit-transition: 0.4s;
-}
 
 section code {
     background-color: whitesmoke;
@@ -101,40 +87,54 @@ a.cite {
 */
 
 /* Styling for the navigation button */
-.button-nav {
-  display: inline-block;
-  padding: 0.5em 0.75em;
-  color: #FFF;
-  background-color: #333;
-  border-radius: 0.25em;
-  text-decoration: none;
-  -webkit-transition: background-color 0.5s ease-out;
-  transition: background-color 0.5s ease-out;
+
+.book-button {
+    margin-top:1em;
+    padding: 0.5em 1em 0.5em 1em;
+    width:100%;
+    background-color:#ED5C0C;
+    color:white;
+    opacity:0.7;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 11px;
 }
 
-.button:hover{
-	opacity: 0.4;
-	-o-transition: 0.4s;
-	-ms-transition: 0.4s;
-	-moz-transition: 0.4s;
-	-webkit-transition: 0.4s;
+.book-button:hover{
+    opacity:1;
+}
+    
+.submit-button, .cancel-button {
+    background-color: white;
+    margin-top: 0.8em;
+    color: #ED5C0C;
+    width: 20%;
+    font-size: 0.5em;
+    padding: 0.8em;
+    border-radius:2em;
+    text-transform: uppercase;
 }
 
-
-.button.submit {
-	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	padding: 1rem;
-	color: black;
-	background: white;
-	text-transform: uppercase;
+.submit-button, .cancel-button{
+    font-weight: bold;
+    border:0.2em solid #ED5C0C;
+    opacity:0.6;
 }
 
-.button.reset {
-	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	padding: 1rem;
+.submit-button:hover,.cancel-button:hover {
+   color:white;
+   background-color:#ED5C0C;
+   visibility:visible;
+   opacity:1;
+}
+
+.default-button {
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     color: black;
-	background: white;
-	text-transform: uppercase;
+    background: white;
+    outline:0 !important;
+    width: 10%;
+    text-transform: uppercase;
 }
 
 .textfield-label {
@@ -191,19 +191,6 @@ h1 {
     text-transform: uppercase;
 }
 
-h2 {
-    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-}
-
-h3 {
-    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-}
-
-h4 {
-    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-}
-
 h5 {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 1rem;
@@ -236,18 +223,24 @@ h2.idTitle1 {
 
 nav.menu {
     background-color: black;
-    padding: 0.7rem 19rem 0.7rem 0.7rem;
+    padding: 1rem 19rem 0.7rem 0.7rem;
 }
 
-.menu {
-    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+.web-nav {
+    background-color: black;
+    font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
     font-size: 0.9rem;
     max-width: 40rem;  
     padding: 0.5em 0.75em;
-    color: #FFF;
+    color: #DBDBDB;
     text-decoration: none;
-    -webkit-transition: background-color 0.5s ease-out;
-    transition: background-color 0.5s ease-out;
+    color: rgba(255,255,255, 0.8);
+}
+
+.web-nav:hover{
+    border-bottom: 0.2em solid #ED5C0C;
+    color: rgba(255,255,255, 1);
+    color:white;
 }
 
 /*.menu:hover{
@@ -452,12 +445,11 @@ label {
 
 .cOrange {
     background: #ED5C0C;
-
 }
 
-.cCreamsicle {
-    background: #E5CEB1;
-
+.cLightgray {
+    background: #DBDBDB;
+    color: black;
 }
 
 .cGray {
@@ -470,6 +462,7 @@ ul li {
     font-size: 0.9rem;
     max-width: 40rem;   
     color: black;
+    list-style-type: circle;
 }
 
 ol li {
@@ -477,6 +470,7 @@ ol li {
     font-size: 0.9rem;
     max-width: 40rem;    
     color: black;
+    list-style-type: circle;
 }
 
 ol {
@@ -562,12 +556,17 @@ h2.idTitle1 {
 nav.menu {
     background-color: black;
     padding: 0.7rem 19rem 0.7rem 0.7rem;
+    width:100%;
+}
+
+nav.menu a:active, a:hover {
+	opacity:1;
 }
 
 .menu {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 0.9rem;
-    max-width: 40rem;  
+   /* max-width: 40rem;  */
     padding: 0.5em 0.75em;
     color: #FFF;
     text-decoration: none;
