--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -752,15 +752,19 @@ img.heart{
 .customer_name{
     margin-left:-3rem;
     margin-right:-1.5rem;
+    margin-bottom:-0.5em;
 }
 
 .location-selected{
-    margin-top: 0.8rem;
-    margin-left: -3rem;
+    margin-top: 0.6rem;
+    margin-left: 0.2rem;
+
 }
 
 .total-price{
     text-align:end;
     margin-top:2em;
+ 
 }
+
 
