Fixed detail page icon issues and fixed validation errors for style guide

--- a/Style_Guide/css/main.css
+++ b/Style_Guide/css/main.css
@@ -408,6 +408,8 @@ a.cite {
 
 .textfield-label {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    margin-bottom: -0.3rem;
+}
 }
 
 .textfield {
