--- a/Style_Guide/css/main.css
+++ b/Style_Guide/css/main.css
@@ -285,7 +285,7 @@ section:not([id]) {
 }
 
 section h2 {
-  margin-top: 0 0 0.5em 0;
+  margin: 0em 0em 0.5em 0em;
   
 }
 
@@ -409,7 +409,6 @@ a.cite {
 .textfield-label {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     margin-bottom: -0.3rem;
-}
 }
 
 .textfield {
@@ -580,7 +579,61 @@ nav.menu a:active, a:hover {
     text-decoration: underline;
 }*/
 
-.chef-listing {
-    margin: 0 15rem 0 15rem;
-    
+/*Previous Listing Grid*/
+ul.cheflist {
+    list-style: none;
+    font-size: 0px;
+    margin-left: 17.5%; 
+    margin-right: 0%;  
+    padding-bottom: 2rem;
+}
+
+ul.cheflist li {
+    display: inline-block;
+    padding: 10px;
+    margin: 3.5% 2.7% 1% 3.5%;
+    padding-bottom: 0.2rem;
+    background: #fff;
+    border: 1px solid #ddd;
+    font-size: 16px;
+    font-size: 1rem;
+    vertical-align: top;
+    box-shadow: 0 0 5px #ddd;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+ul.cheflist li img {
+    max-width: 100%;
+    height: auto;
+    margin: 0 0 1.4rem;
+}
+
+ul.cheflist li h3 {
+    margin: 0 0 0.5rem;
+}
+
+ul.cheflist li p {
+    font-size: .9em;
+    line-height: 1.5em;
+    color: #999;
+}
+
+
+/* Class for 2 columns */
+ul.cheflist.columns-2 li {
+    width: 47.5%; 
+}
+
+
+/* Class for 3 columns */
+ul.cheflist.columns-3 li {
+    width: 18.83%;
+}
+
+
+/* Class for 4 columns */
+ul.cheflist.columns-4 li {
+    width: 22.5%; 
 }
